--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -22,7 +22,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="15dp"
-                android:layout_weight="1"
                 app:cardCornerRadius="11dp"
                 app:cardElevation="10dp">
 
@@ -46,12 +45,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginTop="10dp"
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                            android:layout_width="180dp"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
 
@@ -72,7 +73,9 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginTop="10dp"
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -87,7 +90,8 @@
                                 android:id="@+id/auto_complete_predio"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="none" />
+                                android:inputType="none"
+                                 />
 
 
                         </com.google.android.material.textfield.TextInputLayout>
@@ -124,7 +128,7 @@
                             android:text="Sala"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="22dp"
+                            android:textSize="22sp"
                             android:textStyle="bold">
 
                         </TextView>
@@ -136,7 +140,7 @@
                             android:text=" BMP "
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="22dp"
+                            android:textSize="22sp"
                             android:textStyle="bold">
 
                         </TextView>
@@ -146,7 +150,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -193,13 +198,52 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Número de Série"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:layout_marginTop="10dp"
+                            android:textStyle="bold">
+                            </TextView>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/text_input_layout8"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/text_edit_serial"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="Digite o SN ..." />
+
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+
+                    </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Descrição :"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
+                        android:layout_marginTop="10dp"
                         android:textStyle="bold">
 
                     </TextView>
@@ -209,7 +253,8 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp">
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/text_edit_desc"
@@ -224,7 +269,8 @@
                         android:text="Observação :"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
+                        android:layout_marginTop="10dp"
                         android:textStyle="bold">
 
                     </TextView>
@@ -234,7 +280,8 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp">
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/text_edit_obs"
@@ -263,7 +310,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:indeterminate="true"
-                android:layout_weight="1"
                 android:indeterminateTint="@color/black"
                 android:visibility="visible">
             </ProgressBar>
