--- a/app/src/main/res/layout/activity_buscar_bmp.xml
+++ b/app/src/main/res/layout/activity_buscar_bmp.xml
@@ -5,84 +5,68 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".Buscar_BMP">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewXML"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="15dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewXML"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:cardCornerRadius="10dp"
-            android:layout_margin="15dp"
-            app:cardElevation="10dp"
-            >
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="40dp"
+                android:text="Pesquisar por BMP"
+                android:textAlignment="center"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:textSize="23sp"
+                android:textStyle="bold" />
 
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:inputType="number"
+                android:background="@drawable/search_view_bg"
+                app:queryHint="Digite o BMP para buscar..."
+                app:iconifiedByDefault="false" />
 
-                <TextView
-                    android:id="@+id/textView3"
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_buscar_bmp"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:text="Pesquisar por  BMP"
-                    android:textAlignment="center"
-                    android:background="@color/colorPrimary"
-                    android:textColor="@color/white"
-                    android:textSize="23sp"
-                    android:textStyle="bold" />
+                    android:layout_height="match_parent" />
 
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/searchView"
-                    android:layout_width="match_parent"
+                <ProgressBar
+                    android:id="@+id/progress_busca_bmp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:inputType="number"
-                    android:background="@drawable/search_view_bg"
-                    app:queryHint="Digite o BMP para buscar ...."
-                    app:iconifiedByDefault= "false"/>
+                    android:layout_gravity="center"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@color/black"
+                    android:visibility="invisible" />
 
+            </FrameLayout>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"    >
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycler_buscar_bmp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    </androidx.recyclerview.widget.RecyclerView>
-
-                    <ProgressBar
-                        android:layout_width="100dp"
-                        android:id="@+id/progress_busca_bmp"
-                        android:layout_height="100dp"
-                        android:indeterminateTint="@color/black"
-                        android:indeterminate="true"
-                        android:visibility="invisible"
-                        android:layout_gravity="center">
-
-                    </ProgressBar>
-
-                </FrameLayout>
-
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
