--- a/app/src/main/res/layout/activity_estatisticas.xml
+++ b/app/src/main/res/layout/activity_estatisticas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -46,7 +47,6 @@
                 <TextView
                     android:layout_width="100dp"
                     android:textStyle="bold"
-
                     android:text="APR-P"
                     android:textSize="25dp"
                     android:textColor="@color/black"
