--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="42dp"
             android:id="@+id/appName"
-            android:text="APR-P"
+            android:text="IPEV"
             android:textSize="35sp"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -43,7 +43,7 @@
             android:layout_height="42dp"
             android:autoSizeMaxTextSize="60sp"
             android:id="@+id/appName2"
-            android:text="APR-P"
+            android:text="IPEV"
             android:textSize="35sp"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -85,7 +85,7 @@
             android:layout_width="0dp"
             android:layout_height="160dp"
             android:id="@+id/amazonImage"
-            android:src="@drawable/logo_apr_borda"
+            android:src="@drawable/bolacha_ipev"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
