--- a/app/src/main/res/layout/activity_realizar_inventario.xml
+++ b/app/src/main/res/layout/activity_realizar_inventario.xml
@@ -167,4 +167,17 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_finaliza"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="FINALIZAR SALA"
+        android:enabled="false"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
