--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -81,6 +81,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appContent"
             app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/user"
+            app:autoSizeTextType="uniform"
+            android:text="Olá 1S André Silva"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="25dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/appVersion"
+            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
+
         <ImageView
             android:layout_width="0dp"
             android:layout_height="160dp"
@@ -122,7 +138,7 @@
                         android:id="@+id/clothingName"
                         app:autoSizeTextType="uniform"
                         android:text="CADASTRAR \nITENS"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textStyle="bold"
@@ -130,8 +146,8 @@
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/clothingImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/clothingImage"
                         android:src="@drawable/add_inventario"
                         android:layout_marginTop="10dp"
@@ -155,7 +171,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/elecName"
                         android:text="PESQUISAR\nPOR BMP"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         app:autoSizeTextType="uniform"
                         android:textColor="@color/black"
                         android:textStyle="bold"
@@ -164,8 +180,8 @@
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/elecImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/elecImage"
                         android:src="@drawable/busca_bmp"
                         android:layout_marginTop="10dp"
@@ -202,15 +218,15 @@
                         app:autoSizeTextType="uniform"
                         android:textAlignment="center"
                         android:text="PESQUISAR\nPOR LOCAL"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/homeImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/homeImage"
                         android:src="@drawable/busca_local"
                         android:layout_marginTop="10dp"
@@ -235,15 +251,15 @@
                         android:id="@+id/beautyName"
                         app:autoSizeTextType="uniform"
                         android:text="EXPORTAR\nPOR LOCAL"
-                        android:textSize="18dp"
+                        android:textSize="16dp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/beautyImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/beautyImage"
                         android:src="@drawable/export_2"
                         android:layout_marginTop="10dp"
@@ -280,15 +296,15 @@
                         app:autoSizeTextType="uniform"
                         android:textAlignment="center"
                         android:text="REALIZAR\nINVENTÁRIO"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/pharmImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/pharmImage"
                         android:src="@drawable/inventario"
                         android:layout_marginTop="10dp"
@@ -314,15 +330,15 @@
                         app:autoSizeTextType="uniform"
                         android:textAlignment="center"
                         android:text="EXPORTAR\n TODOS ITENS"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/grocImage"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:id="@+id/grocImage"
                         android:src="@drawable/export"
                         android:layout_marginTop="10dp"
@@ -330,6 +346,26 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DESLOGAR"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintTop_toBottomOf="@id/row3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
