--- a/app/src/main/res/layout/recycler_itens.xml
+++ b/app/src/main/res/layout/recycler_itens.xml
@@ -20,6 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="vertical" >
 
 
@@ -32,7 +33,7 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="4"
                         android:text=" Setor: "
                         android:layout_marginTop="10dp"
                         android:textColor="@color/black"
@@ -50,14 +51,21 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Prédio: "
-                        android:layout_marginTop="10dp"
-                        android:textAlignment="center"
+                        android:layout_weight="4"
+                        android:text=" Prédio: "
+
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -67,8 +75,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dp"
-                        android:text="  VALOR"
+                        android:text="VALOR"
+
                         android:textColor="@color/blue"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -78,7 +86,7 @@
                 <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -128,7 +136,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -156,7 +164,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -185,7 +193,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
 
                     <TextView
