--- a/app/src/main/res/layout/recycler_itens_inventario.xml
+++ b/app/src/main/res/layout/recycler_itens_inventario.xml
@@ -239,15 +239,99 @@
 
                 </LinearLayout>
 
-                <Button
-                    android:layout_width="200dp"
-                    android:layout_height="40dp"
-                    android:text="NÃO ENCONTRADO"
-                    android:id="@+id/btn_check"
-                    android:layout_gravity="center"
-                    >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="ESCOLHA A OPÇÃO"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10sp"
+                    android:textAlignment="center"
+                    android:textSize="15sp">
 
-                </Button>
+                </TextView>
+
+                <LinearLayout
+                    android:id="@+id/layout_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:weightSum="2">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_encontrado"
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="1"
+                        android:layout_margin="8dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="6dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/icon_encontrado"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@android:drawable/ic_menu_add"
+                                app:tint="@color/green" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:id="@+id/icon_text_encontrado"
+                                android:layout_height="wrap_content"
+                                android:text="Encontrado"
+                                android:textStyle="bold"
+                                android:textColor="@color/green"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_nao_encontrado"
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="1"
+                        android:layout_margin="8dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="6dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/icon_nao_encontrado"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@android:drawable/ic_delete"
+                                app:tint="@color/red" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:id="@+id/icon_text_nao_encontrado"
+                                android:layout_height="wrap_content"
+                                android:text="Não Encontrado"
+                                android:textStyle="bold"
+                                android:textColor="@color/red"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
                 <Button
                     android:layout_width="200dp"
