--- a/app/src/main/res/layout/activity_acompanha_inventarios.xml
+++ b/app/src/main/res/layout/activity_acompanha_inventarios.xml
@@ -19,7 +19,7 @@
         android:id="@+id/titulo_invent"
         android:layout_marginTop="10dp"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:textStyle="bold">
 
@@ -76,7 +76,7 @@
                         app:autoSizeTextType="uniform"
                         android:text="Inventário : Inventário 2027"
                         android:textColor="@color/black"
-                        android:textSize="19dp"
+                        android:textSize="19sp"
                         android:layout_marginEnd="5dp"
                         android:textStyle="bold"
                         />
@@ -92,7 +92,7 @@
                         android:maxLines="1"
                         android:text="Criado por: 1S André Silva"
                         android:textColor="@color/black"
-                        android:textSize="19dp"
+                        android:textSize="19sp"
                         android:textStyle="bold"
                         />
 
@@ -114,10 +114,9 @@
                     android:maxLines="1"
                     app:autoSizeTextType="uniform"
                     android:text="Data Inclusão"
-                    android:layout_centerHorizontal="true"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
 
                     android:textStyle="bold"
                     />
@@ -130,9 +129,9 @@
                     android:layout_weight="1"
                     app:autoSizeTextType="uniform"
                     android:text="Data Inclusão"
-                    android:layout_centerHorizontal="true"
+
                     android:textColor="@color/black"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
 
                     android:textStyle="bold"
                     />
@@ -154,10 +153,9 @@
                     android:maxLines="1"
                     app:autoSizeTextType="uniform"
                     android:text="VALOR"
-                    android:layout_centerHorizontal="true"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
 
                     android:textStyle="bold"
                     />
@@ -171,9 +169,8 @@
                     android:layout_weight="1"
                     app:autoSizeTextType="uniform"
                     android:text="VALOR"
-                    android:layout_centerHorizontal="true"
                     android:textColor="@color/black"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
 
                     android:textStyle="bold"
                     />
@@ -228,6 +225,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/parte5"
                 android:layout_margin="10dp"
+                android:baselineAligned="false"
                 app:layout_constraintTop_toBottomOf="@+id/parte4"
                 android:orientation="horizontal">
 
@@ -259,7 +257,7 @@
                         android:text="Realizar \nInventário"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textStyle="bold"
                         app:autoSizeTextType="uniform"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -294,7 +292,7 @@
                         android:text="Ver \nEstatísticas"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textStyle="bold"
                         app:autoSizeTextType="uniform"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -348,7 +346,7 @@
             android:text="Nenhum Inventário foi iniciada ou finalizada. Clique em Novo
                               inventário para iniciar uma nova tarefa."
             android:textAlignment="center"
-            android:textSize="30dp">
+            android:textSize="30sp">
 
         </TextView>
 
@@ -359,7 +357,7 @@
         android:layout_height="wrap_content"
         android:text="Selecione o Inventário Desejado"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:autoSizeTextType="uniform"
         android:layout_margin="10dp"
         android:textColor="@color/white"
