--- a/app/src/main/res/layout/activity_buscar_local.xml
+++ b/app/src/main/res/layout/activity_buscar_local.xml
@@ -18,7 +18,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewXML"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             app:cardCornerRadius="10dp"
             android:layout_margin="15dp"
@@ -114,7 +114,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="25">
 
                 <androidx.recyclerview.widget.RecyclerView
