--- a/app/src/main/res/layout/activity_inventario.xml
+++ b/app/src/main/res/layout/activity_inventario.xml
@@ -23,7 +23,7 @@
             android:text="MENU INVENTÁRIOS"
             android:layout_marginLeft="10dp"
             android:textColor="@color/black"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold">
 
         </TextView>
@@ -43,7 +43,7 @@
             android:layout_marginLeft="10dp"
             android:text="ESCOLHA A OPÇÃO DESEJADA"
             android:textColor="@color/cinza_claro"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold">
 
         </TextView>
@@ -89,7 +89,7 @@
                     android:layout_toStartOf="@+id/imageView2"
                     android:text="NOVO INVENTÁRIO"
                     android:textColor="@color/white"
-                    android:textSize="23dp"
+                    android:textSize="23sp"
                     android:textStyle="bold">
 
 
@@ -160,7 +160,7 @@
                     android:layout_toStartOf="@+id/imageView5"
                     android:text="ACOMPANHAR INVENTÁRIOS"
                     android:textColor="@color/white"
-                    android:textSize="17dp"
+                    android:textSize="17sp"
                     android:textStyle="bold">
 
                 </TextView>
@@ -231,7 +231,7 @@
                     android:letterSpacing="0.1"
                     android:text="PENDÊNCIAS"
                     android:textColor="@color/white"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold">
 
 
