--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -60,7 +60,7 @@
             app:autoSizeTextType="uniform"
             android:id="@+id/appContent"
             android:text="Controle Material Carga"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginStart="26dp"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
@@ -251,7 +251,7 @@
                         android:id="@+id/beautyName"
                         app:autoSizeTextType="uniform"
                         android:text="EXPORTAR\nPOR LOCAL"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
