--- a/app/src/main/res/layout/activity_main_cadastro.xml
+++ b/app/src/main/res/layout/activity_main_cadastro.xml
@@ -56,6 +56,7 @@
         android:id="@+id/editTextNome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="Nome  -  (Ex: 1S Fulano)"
         android:inputType="textPersonName"
         android:padding="12dp"
@@ -71,7 +72,7 @@
         android:id="@+id/editTextEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:autofillHints="" android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
         android:background="@drawable/background_button3"
@@ -87,7 +88,7 @@
         android:id="@+id/editTextSenha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Senha"
+        android:autofillHints="" android:hint="Senha"
         android:inputType="textPassword"
         android:padding="12dp"
         android:background="@drawable/background_button3"
