--- a/app/src/main/res/layout/activity_relatorios.xml
+++ b/app/src/main/res/layout/activity_relatorios.xml
@@ -16,7 +16,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewXML"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_margin="15dp"
             app:cardCornerRadius="11dp"
@@ -81,10 +81,7 @@
                         android:background="@color/black"
                         android:orientation="horizontal"/>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"/>
+
 
                     <TextView
                         android:layout_width="match_parent"
@@ -147,7 +144,6 @@
 
         <Button
             android:id="@+id/btn_gerar_relatorio"
-            android:layout_alignParentBottom="true"
             android:layout_width="200dp"
             android:layout_marginBottom="20dp"
             android:layout_height="wrap_content"
