--- a/app/src/main/res/layout/activity_resultado_pendencias.xml
+++ b/app/src/main/res/layout/activity_resultado_pendencias.xml
@@ -17,7 +17,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewXML"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_margin="15dp"
             app:cardCornerRadius="11dp"
