--- a/app/src/main/res/layout/progressdialog2.xml
+++ b/app/src/main/res/layout/progressdialog2.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="Comparando Dados ..."
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp">
 
