--- a/app/src/main/res/layout/recycler_bmps.xml
+++ b/app/src/main/res/layout/recycler_bmps.xml
@@ -37,7 +37,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="15dp"
                         android:textColor="@color/black"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -48,7 +48,7 @@
                         android:text="VALOR"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/blue"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -69,7 +69,7 @@
                         android:text="   Descrição: "
                         android:textAlignment="textStart"
                         android:textColor="@color/black"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -79,7 +79,7 @@
                         android:layout_weight="1"
                         android:text="VALOR"
                         android:textColor="@color/blue"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
 
