--- a/app/src/main/res/layout/recycler_estatisticas.xml
+++ b/app/src/main/res/layout/recycler_estatisticas.xml
@@ -22,7 +22,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:text="SETOR"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/black" />
 
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="1"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:layout_gravity="center"
@@ -62,7 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="/"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:layout_gravity="center"
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="150"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:layout_gravity="center"
@@ -89,7 +89,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginTop="5dp"
             android:text="100%"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/black" />
     </LinearLayout>
