--- a/app/src/main/res/layout/recycler_itens.xml
+++ b/app/src/main/res/layout/recycler_itens.xml
@@ -107,7 +107,7 @@
                     android:text="VALOR"
 
                     android:textColor="@color/blue"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
