--- a/app/src/main/res/layout/recycler_proj_inventarios.xml
+++ b/app/src/main/res/layout/recycler_proj_inventarios.xml
@@ -44,7 +44,7 @@
                             android:layout_marginStart="10dp"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
 
@@ -59,7 +59,7 @@
                             android:layout_marginTop="10dp"
                             app:autoSizeTextType="uniform"
                             android:textColor="@color/black"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
 
@@ -80,7 +80,7 @@
                             android:textAlignment="center"
                             android:layout_marginTop="10dp"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -93,7 +93,7 @@
                             android:text="  VALOR"
                             app:autoSizeTextType="uniform"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
